Change log Performance
1. To increase performance, I changed many of the images from PDF, JPEG to more website-friendly formats and gave them proper sizing.

1a. These images are given smaller sizes so they don't take nearly as long to load

--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -9,7 +9,7 @@
   <footer>
     <div class="f-left">
       <div style="width: 112px;">
-        <img class="temporary-logo" src="../assets-and-images/logo.png" alt="Gospel Tabernacle Logo">
+        <img class="logo" src="../assets-and-images/logo/logo.webp" alt="Gospel Tabernacle Logo">
       </div>
       <div class="church-name">
         The Gospel Tabernacle Church of Jesus Christ Apostolic HQ
@@ -37,7 +37,7 @@
           <li class="contact-item">
             <a href="https://maps.app.goo.gl/tJ7qoJEpSMfPPKZd7" target="_blank">
               <span class="icon-container">
-                <img src="../assets-and-images/pinpoint-icon.png" alt="Address" class="contact-icon">
+                <img src="../assets-and-images/icons/pinpoint.svg" alt="Address" class="contact-icon">
               </span>
               <span class="contact-text">2314 Snyder Avenue Brooklyn, NY 11226</span>
             </a>
@@ -45,7 +45,7 @@
           <li class="contact-item">
             <a href="mailto:noidea@gmail.com">
               <span class="icon-container">
-                <img src="../assets-and-images/envelope-icon.png" alt="Email" class="contact-icon">
+                <img src="../assets-and-images/icons/email.svg" alt="Email" class="contact-icon">
               </span>
               <span class="contact-text">gtc2314@gmail.com</span>
             </a>
@@ -53,7 +53,7 @@
           <li class="contact-item">
             <a href="tel:7182823920">
               <span class="icon-container">
-                <img src="../assets-and-images/phone-icon.png" alt="Phone" class="contact-icon">
+                <img src="../assets-and-images/icons/phone.svg" alt="Phone" class="contact-icon">
               </span>
               <span class="contact-text">(718) 282-3920</span>
             </a>
@@ -82,7 +82,7 @@
           <iframe 
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48434.36199398382!2d-73.95520216269472!3d40.64867613018595!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b413ff319eb%3A0x1c0d9ec380f63b18!2s2314%20Snyder%20Ave%2C%20Brooklyn%2C%20NY%2011226!5e0!3m2!1sen!2sus!4v1743629346906!5m2!1sen!2sus"
             width="100%" 
-            height="150" 
+            height="140" 
             style="border:0;" 
             allowfullscreen="" 
             loading="lazy" 
