--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -18,7 +18,7 @@
           <a href="/departments.html"   class="element">Departments</a>
           <a href="/">
             <img id="h-logo"
-            src="../assets-and-images/logo.png" >
+            src="../assets-and-images/logo/logo.webp" >
           </a>
           <a href="/calendar.html"   class="element">Events</a>
           <a href="/new-here.html"   class="element">New Here?</a>
@@ -35,7 +35,7 @@
        
        <div class="mobile-logo">
            <a href="/">
-               <img src="../assets-and-images/logo.png" alt="Church Logo">
+               <img src="../assets-and-images/logo/logo.webp" alt="Church Logo">
            </a>
        </div>
        
@@ -51,13 +51,13 @@
        <!-- Social Media Icons -->
        <div class="mobile-social-media">
            <a href="https://www.facebook.com/gospeltabernacle.brooklyn" target="_blank">
-               <img class="scpic" src="../assets-and-images/facebook.png" alt="Facebook">
+               <img class="scpic" src="../assets-and-images/icons/facebook.svg" alt="Facebook">
            </a>
            <a href="https://www.instagram.com/gtchq/" target="_blank">
-               <img class="scpic" src="../assets-and-images/instagram.png" alt="Instagram">
+               <img class="scpic" src="../assets-and-images/icons/instagram.svg" alt="Instagram">
            </a>
            <a href="https://www.youtube.com/@gtchq623" target="_blank">
-               <img class="scpic" src="../assets-and-images/youtube.png" alt="YouTube">
+               <img class="scpic" src="../assets-and-images/icons/youtube.svg" alt="YouTube">
            </a>
        </div>
    </div>
