--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -43,7 +43,7 @@
             </a>
           </li>
           <li class="contact-item">
-            <a href="mailto:noidea@gmail.com">
+            <a href="mailto:gtc2314@gmail.com">
               <span class="icon-container">
                 <img src="../assets-and-images/icons/email.svg" alt="Email" class="contact-icon">
               </span>
