--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -43,11 +43,11 @@
             </a>
           </li>
           <li class="contact-item">
-            <a href="mailto:gtc2314@gmail.com">
+            <a href="mailto:gtchq2314@gmail.com">
               <span class="icon-container">
                 <img src="../assets-and-images/icons/email.svg" alt="Email" class="contact-icon">
               </span>
-              <span class="contact-text">gtc2314@gmail.com</span>
+              <span class="contact-text">gtchq2314@gmail.com</span>
             </a>
           </li>
           <li class="contact-item">
