--- a/Website/components/footer.html
+++ b/Website/components/footer.html
@@ -86,7 +86,8 @@
             style="border:0;" 
             allowfullscreen="" 
             loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
+            referrerpolicy="no-referrer-when-downgrade"
+            title="Google Map church location">
           </iframe>
         </div>
       </div>
