--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -18,7 +18,9 @@
           <a href="/departments.html"   class="element">Departments</a>
           <a href="/">
             <img id="h-logo"
-            src="../assets-and-images/logo/logo.webp" >
+            src="../assets-and-images/logo/logo.webp" 
+            alt="Church Logo"
+            >
           </a>
           <a href="/calendar.html"   class="element">Events</a>
           <a href="/new-here.html"   class="element">New Here?</a>
