--- a/Website/styles/general.css
+++ b/Website/styles/general.css
@@ -8,6 +8,7 @@ body{
   font-family: poppins;
   overflow-x: hidden;
   background-color: ffffff;
+  height: 100%;
   min-height: 100vh;
   box-sizing: border-box;
 }
