--- a/Website/styles/main.css
+++ b/Website/styles/main.css
@@ -1,5 +1,6 @@
 /* Clean this up later, css for this is all over the place and some of it isn't needed */
 body{
+  height: 100%;
   margin: 0;
   font-family: arial;
 }
