Change Log -Large Content
1. Adding major additions to the website
1a Leader section now contains the Pastor and the Bishop
1b Departments now contain all the main departments that need to be added
1c About us page now has more structure

2.  Footer and Temporary Banner now has a gradient styling

3. Verse Section will be reduced in text sizing on larger screens

4. Countdown is now smaller and at the near top of the page

Co-Authored-By: GTCHQDevs <203009018+GTCHQDevs@users.noreply.github.com>

--- a/Website/styles/footer.css
+++ b/Website/styles/footer.css
@@ -5,7 +5,7 @@
 }
 
 footer {
-  background-color: #9b1b30;
+   background: linear-gradient(135deg, #9b1b30, #571e1e);
   color: #e6f7ff;
   position: relative;
   display: flex;
