--- a/Website/components/header.html
+++ b/Website/components/header.html
@@ -44,7 +44,7 @@
        <div class="mobile-nav-group">
            <div class="mobile-nav-item"><a href="/about-us.html">About Us</a></div>
            <div class="mobile-nav-item"><a href="/leadership.html">Leadership</a></div>
-           <div class="mobile-nav-item"><a href="../departments/index.html">Departments</a></div>
+           <div class="mobile-nav-item"><a href="/departments.html">Departments</a></div>
            <div class="mobile-nav-item"><a href="/calendar.html">Events</a></div>
            <div class="mobile-nav-item"><a href="/new-here.html">New Here?</a></div>
            <div class="mobile-nav-item"><a href="/contact-us.html">Contact Us</a></div>
