--- a/Website/styles/general.css
+++ b/Website/styles/general.css
@@ -29,7 +29,7 @@ main{
   top: 0;
   height: 150px;
   width: 100%;
-  background-color:#981b30bb;
+    background: linear-gradient(135deg, #9b1b30, #571e1e);
 }
 
 
