--- a/Website/styles/aboutUs.css
+++ b/Website/styles/aboutUs.css
@@ -121,6 +121,16 @@ ul li {
   height: 200px;
   object-fit: cover;
 }
+.leader-photo {
+  width: 100%;
+  height: 225px;
+  object-fit: cover;
+  border-radius: 12px 12px 0 0;
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-position: 0 -20px;  
+}
 .leader-info {
   padding: 12px;
   font-size: 0.95rem;
